# bilateral_filter_library

./: .gitignore  CMakeLists.txt  README.md
apps/: bilateral_filter_cli.cpp
examples/: run_example.txt
include/bilateral_filter/: bilateral_filter.hpp
src/: bilateral_filter.cpp
